[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Sprite-0001.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
z_index = 4
collision_layer = 4
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.188235, 0.188235, 0.188235, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="HitAnimationArea" type="Area2D" parent="." groups=["EnemyArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitAnimationArea"]
shape = SubResource( 2 )

[node name="DoorZ_index" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorZ_index"]
shape = SubResource( 4 )

[connection signal="area_entered" from="HitAnimationArea" to="." method="_on_HitAnimationArea_area_entered"]
[connection signal="area_exited" from="HitAnimationArea" to="." method="_on_HitAnimationArea_area_exited"]
[connection signal="area_entered" from="DoorZ_index" to="." method="_on_DoorZ_index_area_entered"]
[connection signal="area_exited" from="DoorZ_index" to="." method="_on_DoorZ_index_area_exited"]
